// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout picker visual snapshots > matches the onboarding layout step on the blueprints tab 1`] = `
<div>
  <div
    class="flex flex-1 flex-col overflow-hidden px-4 pt-4 sm:px-6 sm:pt-6"
  >
    <div
      class="mb-1 font-mono text-dim text-w-sm uppercase tracking-widest"
    >
      Dashboard Layout
    </div>
    <p
      class="mb-3 font-mono text-dim text-w-sm"
    >
      Start from a Template — an empty All Projects grid you fill yourself — or switch to Blueprints for a ready-made dashboard tailored to your setup. Project-only widgets can be added after you create a project.
    </p>
    <div
      class="mb-4 flex items-center gap-4"
    >
      <div
        class="flex gap-1 rounded-item bg-surface-raised p-0.5"
      >
        <button
          class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-muted h-6 tracking-normal rounded-item w-auto rounded-item px-3 py-1.5 font-mono text-w-sm capitalize transition-colors text-foreground-secondary hover:text-foreground"
          type="button"
        >
          templates
        </button>
        <button
          class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-muted h-6 tracking-normal rounded-item w-auto rounded-item px-3 py-1.5 font-mono text-w-sm capitalize transition-colors bg-accent text-accent-foreground"
          type="button"
        >
          blueprints
        </button>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <span
          class="font-mono text-dim text-w-sm uppercase tracking-wider"
        >
          Columns
        </span>
        <div
          class="flex gap-1"
        >
          <button
            class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-secondary text-foreground-secondary hover:bg-muted h-7 px-3 text-w-sm normal-case tracking-normal rounded-item w-auto"
            type="button"
          >
            2
          </button>
          <button
            class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-secondary text-foreground-secondary hover:bg-muted h-7 px-3 text-w-sm normal-case tracking-normal rounded-item w-auto"
            type="button"
          >
            3
          </button>
          <button
            class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-accent text-accent-foreground hover:bg-accent/90 h-7 px-3 text-w-sm normal-case tracking-normal rounded-item w-auto"
            type="button"
          >
            4
          </button>
        </div>
        <span
          class="font-mono text-dim text-w-xs"
        >
          Auto-detected for your screen
        </span>
      </div>
    </div>
    <div
      class="min-h-0 flex-1 overflow-y-auto pr-1"
    >
      <div
        class="grid grid-cols-2 gap-3 sm:grid-cols-3 lg:grid-cols-4"
      >
        <button
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border text-left transition-colors hover:border-accent hover:bg-surface-raised border-accent bg-surface-raised ring-2 ring-accent ring-inset"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Analytics — Traffic & conversion"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Analytics
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Revenue — Revenue metrics"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Revenue
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="SEO — Organic search"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  SEO
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(33.33% - 1px);"
                title="Sponsors — Community health"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Sponsors
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Analytics — Analytics trends"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Analytics
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Service Monitor — Service reliability"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Service Monitor — Service sentiment"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 33.33%; width: 25%; height: calc(33.33% - 1px);"
                title="Release Activity — Release cadence"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Roadmap — Roadmap activity"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Roadmap
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Service Monitor — Domain health"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Service Monitor — Service status"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 66.66%; width: 25%; height: 33.34%;"
                title="Release Activity — Release activity"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex w-full flex-1 flex-col gap-1.5 border-border border-t px-3 py-2.5"
          >
            <span
              class="truncate font-mono text-foreground text-w-sm"
            >
              Growth Dashboard
            </span>
            <div
              class="flex flex-wrap items-center gap-1"
            >
              <span
                class="inline-flex items-center rounded-item font-mono uppercase tracking-wider transition-interactive whitespace-nowrap border border-transparent bg-muted text-muted-foreground px-1 py-0.5 text-w-sm tracking-badge-dense"
              >
                12
                 widgets
              </span>
              <span
                class="inline-flex items-center rounded-item font-mono uppercase tracking-wider transition-interactive whitespace-nowrap bg-accent/10 text-accent border border-accent/20 px-1 py-0.5 text-w-sm tracking-badge-dense"
              >
                For you
              </span>
            </div>
            <p
              class="line-clamp-2 font-mono text-dim text-w-xs leading-relaxed"
            >
              Analytics, revenue, and SEO metrics across 12 tiles. For marketers and data analysts focused on growth levers.
            </p>
          </div>
        </button>
        <button
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="SEO — Search rankings & CTR"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  SEO
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Analytics — Traffic & sessions"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Analytics
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Analytics — Content analytics"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Analytics
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(33.33% - 1px);"
                title="Empty cell"
              />
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Service Monitor — Service feedback and health"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Bookmarks — Bookmarks & references"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Bookmarks
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Release Activity — Content releases"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 33.33%; width: 25%; height: calc(33.33% - 1px);"
                title="Empty cell"
              />
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Sponsors — Community health"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Sponsors
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Service Monitor — Service health"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Service Monitor — Service reliability"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 66.66%; width: 25%; height: 33.34%;"
                title="Empty cell"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-1 flex-col gap-1.5 border-border border-t px-3 py-2.5"
          >
            <span
              class="truncate font-mono text-foreground text-w-sm"
            >
              SEO & Analytics Hub
            </span>
            <div
              class="flex flex-wrap items-center gap-1"
            >
              <span
                class="inline-flex items-center rounded-item font-mono uppercase tracking-wider transition-interactive whitespace-nowrap border border-transparent bg-muted text-muted-foreground px-1 py-0.5 text-w-sm tracking-badge-dense"
              >
                9
                 widgets
              </span>
            </div>
            <p
              class="line-clamp-2 font-mono text-dim text-w-xs leading-relaxed"
            >
              Deep SEO and traffic analytics with search console data, page views, and content performance tracking.
            </p>
          </div>
        </button>
        <button
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(50% - 1px); height: calc(67% - 1px);"
                title="Sponsors — Sponsorship and community traction"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Sponsors
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(34% - 1px);"
                title="Roadmap — Roadmap activity and review queue"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Roadmap
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(34% - 1px);"
                title="Empty cell"
              />
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 34%; width: calc(25% - 1px); height: calc(33% - 1px);"
                title="Analytics — Analytics trends"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Analytics
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 34%; width: 25%; height: calc(33% - 1px);"
                title="Empty cell"
              />
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 67%; width: calc(25% - 1px); height: 33%;"
                title="Release Activity — Release cadence"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 67%; width: calc(25% - 1px); height: 33%;"
                title="Sponsors — Sponsor revenue"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Sponsors
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 67%; width: calc(25% - 1px); height: 33%;"
                title="Release Activity — Release activity"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 67%; width: 25%; height: 33%;"
                title="Empty cell"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-1 flex-col gap-1.5 border-border border-t px-3 py-2.5"
          >
            <span
              class="truncate font-mono text-foreground text-w-sm"
            >
              Open Source Command Center
            </span>
            <div
              class="flex flex-wrap items-center gap-1"
            >
              <span
                class="inline-flex items-center rounded-item font-mono uppercase tracking-wider transition-interactive whitespace-nowrap border border-transparent bg-muted text-muted-foreground px-1 py-0.5 text-w-sm tracking-badge-dense"
              >
                6
                 widgets
              </span>
            </div>
            <p
              class="line-clamp-2 font-mono text-dim text-w-xs leading-relaxed"
            >
              Track sponsorship, roadmap, analytics, and release activity at a glance. Designed for open source maintainers who need community health metrics front and center.
            </p>
          </div>
        </button>
        <button
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Revenue — MRR & gross revenue"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Revenue
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Analytics — Visitor & session metrics"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Analytics
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="SEO — Search performance"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  SEO
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(33.33% - 1px);"
                title="Empty cell"
              />
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Release Activity — Release timeline"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Service Monitor — Service monitoring"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Roadmap — Roadmap activity"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Roadmap
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 33.33%; width: 25%; height: calc(33.33% - 1px);"
                title="Empty cell"
              />
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Sponsors — Community traction"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Sponsors
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Release Activity — Release cadence"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Service Monitor — Service status"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 66.66%; width: 25%; height: 33.34%;"
                title="Empty cell"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-1 flex-col gap-1.5 border-border border-t px-3 py-2.5"
          >
            <span
              class="truncate font-mono text-foreground text-w-sm"
            >
              Indie Revenue Dashboard
            </span>
            <div
              class="flex flex-wrap items-center gap-1"
            >
              <span
                class="inline-flex items-center rounded-item font-mono uppercase tracking-wider transition-interactive whitespace-nowrap border border-transparent bg-muted text-muted-foreground px-1 py-0.5 text-w-sm tracking-badge-dense"
              >
                9
                 widgets
              </span>
            </div>
            <p
              class="line-clamp-2 font-mono text-dim text-w-xs leading-relaxed"
            >
              Revenue, analytics, and SEO in one view. Built for indie hackers who ship solo and need to track product-market fit signals.
            </p>
          </div>
        </button>
        <button
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: 100%;"
                title="Service Monitor — Service monitor overview"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: 75%; height: calc(70% - 1px);"
                title="Service Monitor — Service health history"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 70%; width: calc(25% - 1px); height: 30%;"
                title="Release Activity — Release queue"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 70%; width: calc(25% - 1px); height: 30%;"
                title="Service Monitor — Service status"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 70%; width: 25%; height: 30%;"
                title="Empty cell"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-1 flex-col gap-1.5 border-border border-t px-3 py-2.5"
          >
            <span
              class="truncate font-mono text-foreground text-w-sm"
            >
              DevOps Monitor
            </span>
            <div
              class="flex flex-wrap items-center gap-1"
            >
              <span
                class="inline-flex items-center rounded-item font-mono uppercase tracking-wider transition-interactive whitespace-nowrap border border-transparent bg-muted text-muted-foreground px-1 py-0.5 text-w-sm tracking-badge-dense"
              >
                4
                 widgets
              </span>
            </div>
            <p
              class="line-clamp-2 font-mono text-dim text-w-xs leading-relaxed"
            >
              Observability rail with service health and release activity. Designed for platform engineers who need operational awareness.
            </p>
          </div>
        </button>
        <button
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Service Monitor — App health and reviews"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="SEO — Search performance"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  SEO
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Revenue — In-app revenue"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Revenue
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(33.33% - 1px);"
                title="Empty cell"
              />
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Analytics — User analytics"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Analytics
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Service Monitor — Crash & service monitoring"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Release Activity — Release history"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 33.33%; width: 25%; height: calc(33.33% - 1px);"
                title="Empty cell"
              />
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Analytics — App analytics"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Analytics
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Service Monitor — Service health"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Sponsors — Community health"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Sponsors
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 66.66%; width: 25%; height: 33.34%;"
                title="Empty cell"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-1 flex-col gap-1.5 border-border border-t px-3 py-2.5"
          >
            <span
              class="truncate font-mono text-foreground text-w-sm"
            >
              Mobile App Tracker
            </span>
            <div
              class="flex flex-wrap items-center gap-1"
            >
              <span
                class="inline-flex items-center rounded-item font-mono uppercase tracking-wider transition-interactive whitespace-nowrap border border-transparent bg-muted text-muted-foreground px-1 py-0.5 text-w-sm tracking-badge-dense"
              >
                9
                 widgets
              </span>
            </div>
            <p
              class="line-clamp-2 font-mono text-dim text-w-xs leading-relaxed"
            >
              App Store reviews, ASO keywords, revenue, and analytics. Everything you need to track app health.
            </p>
          </div>
        </button>
        <button
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Roadmap — Roadmap & milestones"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Roadmap
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Roadmap — Roadmap throughput"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Roadmap
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Release Activity — Release cadence"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(33.33% - 1px);"
                title="Empty cell"
              />
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Release Activity — Release activity"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Service Monitor — Service health"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Analytics — Product usage"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Analytics
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 33.33%; width: 25%; height: calc(33.33% - 1px);"
                title="Empty cell"
              />
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="SEO — Search visibility"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  SEO
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Service Monitor — Service health"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Release Activity — Release cadence"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 66.66%; width: 25%; height: 33.34%;"
                title="Empty cell"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-1 flex-col gap-1.5 border-border border-t px-3 py-2.5"
          >
            <span
              class="truncate font-mono text-foreground text-w-sm"
            >
              Team Velocity
            </span>
            <div
              class="flex flex-wrap items-center gap-1"
            >
              <span
                class="inline-flex items-center rounded-item font-mono uppercase tracking-wider transition-interactive whitespace-nowrap border border-transparent bg-muted text-muted-foreground px-1 py-0.5 text-w-sm tracking-badge-dense"
              >
                9
                 widgets
              </span>
            </div>
            <p
              class="line-clamp-2 font-mono text-dim text-w-xs leading-relaxed"
            >
              Roadmap progress, Roadmap throughput, builds, and release cadence. A manager's view of team output and project health.
            </p>
          </div>
        </button>
        <button
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Analytics — Traffic & audience overview"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Analytics
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="SEO — Search performance"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  SEO
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Bookmarks — Curated bookmarks"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Bookmarks
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(33.33% - 1px);"
                title="Service Monitor — Audience feedback"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Release Activity — Content releases"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Analytics — Analytics metrics"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Analytics
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
                title="Sponsors — Community traction"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Sponsors
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 33.33%; width: 25%; height: calc(33.33% - 1px);"
                title="Release Activity — Release updates"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Release Activity
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Roadmap — Roadmap activity"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Roadmap
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Service Monitor — Service health"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
                title="Service Monitor — Service monitoring"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Service Monitor
                </span>
              </div>
              <div
                class="absolute flex items-center justify-center border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 66.66%; width: 25%; height: 33.34%;"
                title="Revenue — Sponsorship & revenue"
              >
                <span
                  class="truncate px-0.5 font-mono text-foreground/50 text-w-xs leading-none"
                >
                  Revenue
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex w-full flex-1 flex-col gap-1.5 border-border border-t px-3 py-2.5"
          >
            <span
              class="truncate font-mono text-foreground text-w-sm"
            >
              Content Creator Hub
            </span>
            <div
              class="flex flex-wrap items-center gap-1"
            >
              <span
                class="inline-flex items-center rounded-item font-mono uppercase tracking-wider transition-interactive whitespace-nowrap border border-transparent bg-muted text-muted-foreground px-1 py-0.5 text-w-sm tracking-badge-dense"
              >
                12
                 widgets
              </span>
            </div>
            <p
              class="line-clamp-2 font-mono text-dim text-w-xs leading-relaxed"
            >
              Analytics, SEO, bookmarks, and release activity across 12 tiles. Track content reach and audience growth at a glance.
            </p>
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex shrink-0 items-center justify-between border-border/40 border-t py-4"
    >
      <button
        class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-muted h-7 px-3 text-w-sm rounded-item w-auto font-mono uppercase tracking-widest"
      >
        Back
      </button>
      <button
        class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-accent text-accent-foreground hover:bg-accent/90 h-7 px-3 text-w-sm rounded-item w-auto font-mono uppercase tracking-widest"
      >
        Continue
      </button>
    </div>
  </div>
</div>
`;

exports[`layout picker visual snapshots > matches the onboarding layout step on the templates tab 1`] = `
<div>
  <div
    class="flex flex-1 flex-col overflow-hidden px-4 pt-4 sm:px-6 sm:pt-6"
  >
    <div
      class="mb-1 font-mono text-dim text-w-sm uppercase tracking-widest"
    >
      Dashboard Layout
    </div>
    <p
      class="mb-3 font-mono text-dim text-w-sm"
    >
      Start from a Template — an empty All Projects grid you fill yourself — or switch to Blueprints for a ready-made dashboard tailored to your setup. Project-only widgets can be added after you create a project.
    </p>
    <div
      class="mb-4 flex items-center gap-4"
    >
      <div
        class="flex gap-1 rounded-item bg-surface-raised p-0.5"
      >
        <button
          class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-muted h-6 tracking-normal rounded-item w-auto rounded-item px-3 py-1.5 font-mono text-w-sm capitalize transition-colors bg-accent text-accent-foreground"
          type="button"
        >
          templates
        </button>
        <button
          class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-muted h-6 tracking-normal rounded-item w-auto rounded-item px-3 py-1.5 font-mono text-w-sm capitalize transition-colors text-foreground-secondary hover:text-foreground"
          type="button"
        >
          blueprints
        </button>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <span
          class="font-mono text-dim text-w-sm uppercase tracking-wider"
        >
          Columns
        </span>
        <div
          class="flex gap-1"
        >
          <button
            class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-secondary text-foreground-secondary hover:bg-muted h-7 px-3 text-w-sm normal-case tracking-normal rounded-item w-auto"
            type="button"
          >
            2
          </button>
          <button
            class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-secondary text-foreground-secondary hover:bg-muted h-7 px-3 text-w-sm normal-case tracking-normal rounded-item w-auto"
            type="button"
          >
            3
          </button>
          <button
            class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-accent text-accent-foreground hover:bg-accent/90 h-7 px-3 text-w-sm normal-case tracking-normal rounded-item w-auto"
            type="button"
          >
            4
          </button>
        </div>
        <span
          class="font-mono text-dim text-w-xs"
        >
          Auto-detected for your screen
        </span>
      </div>
    </div>
    <div
      class="min-h-0 flex-1 overflow-y-auto pr-1"
    >
      <div
        class="grid grid-cols-2 gap-3 sm:grid-cols-3 lg:grid-cols-4"
      >
        <button
          aria-pressed="false"
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 33.33%; width: 25%; height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 66.66%; width: 25%; height: 33.34%;"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-col gap-1 border-border border-t px-3 py-2.5"
          >
            <span
              class="flex items-center gap-1.5 truncate font-mono text-foreground text-w-sm"
            >
              Basic 3x3
            </span>
            <span
              class="font-mono text-dim text-w-xs"
            >
              12 cells
            </span>
          </div>
        </button>
        <button
          aria-pressed="false"
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(50% - 1px); height: calc(67% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(34% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(34% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 34%; width: calc(25% - 1px); height: calc(33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 34%; width: 25%; height: calc(33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 67%; width: calc(25% - 1px); height: 33%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 67%; width: calc(25% - 1px); height: 33%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 67%; width: calc(25% - 1px); height: 33%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 67%; width: 25%; height: 33%;"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-col gap-1 border-border border-t px-3 py-2.5"
          >
            <span
              class="flex items-center gap-1.5 truncate font-mono text-foreground text-w-sm"
            >
              Hero Focus
            </span>
            <span
              class="font-mono text-dim text-w-xs"
            >
              9 cells
            </span>
          </div>
        </button>
        <button
          aria-pressed="false"
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: 100%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: 75%; height: calc(70% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 70%; width: calc(25% - 1px); height: 30%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 70%; width: calc(25% - 1px); height: 30%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 70%; width: 25%; height: 30%;"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-col gap-1 border-border border-t px-3 py-2.5"
          >
            <span
              class="flex items-center gap-1.5 truncate font-mono text-foreground text-w-sm"
            >
              Rail Workbench
            </span>
            <span
              class="font-mono text-dim text-w-xs"
            >
              5 cells
            </span>
          </div>
        </button>
        <button
          aria-pressed="false"
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: calc(22% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: calc(22% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(22% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(22% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 22%; width: calc(50% - 1px); height: 78%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 22%; width: calc(25% - 1px); height: calc(39% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 22%; width: 25%; height: calc(39% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 61%; width: calc(25% - 1px); height: 39%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 61%; width: 25%; height: 39%;"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-col gap-1 border-border border-t px-3 py-2.5"
          >
            <span
              class="flex items-center gap-1.5 truncate font-mono text-foreground text-w-sm"
            >
              Summary Band
            </span>
            <span
              class="font-mono text-dim text-w-xs"
            >
              9 cells
            </span>
          </div>
        </button>
        <button
          aria-pressed="false"
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: 100%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: 100%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: 100%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: 100%;"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-col gap-1 border-border border-t px-3 py-2.5"
          >
            <span
              class="flex items-center gap-1.5 truncate font-mono text-foreground text-w-sm"
            >
              Summary Only
            </span>
            <span
              class="font-mono text-dim text-w-xs"
            >
              4 cells
            </span>
          </div>
        </button>
        <button
          aria-pressed="false"
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: calc(24% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: calc(24% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(24% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(24% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 24%; width: 100%; height: 76%;"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-col gap-1 border-border border-t px-3 py-2.5"
          >
            <span
              class="flex items-center gap-1.5 truncate font-mono text-foreground text-w-sm"
            >
              Summary + List
            </span>
            <span
              class="font-mono text-dim text-w-xs"
            >
              5 cells
            </span>
          </div>
        </button>
        <button
          aria-pressed="false"
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: 100%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: 75%; height: 100%;"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-col gap-1 border-border border-t px-3 py-2.5"
          >
            <span
              class="flex items-center gap-1.5 truncate font-mono text-foreground text-w-sm"
            >
              Rail + List
            </span>
            <span
              class="font-mono text-dim text-w-xs"
            >
              2 cells
            </span>
          </div>
        </button>
        <button
          aria-pressed="false"
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: calc(22% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: calc(22% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(22% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(22% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 22%; width: 100%; height: 78%;"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-col gap-1 border-border border-t px-3 py-2.5"
          >
            <span
              class="flex items-center gap-1.5 truncate font-mono text-foreground text-w-sm"
            >
              Summary + Tabs
            </span>
            <span
              class="font-mono text-dim text-w-xs"
            >
              5 cells
            </span>
          </div>
        </button>
        <button
          aria-pressed="false"
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: calc(50% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: calc(50% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(50% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(50% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 50%; width: calc(25% - 1px); height: 50%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 50%; width: calc(25% - 1px); height: 50%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 50%; width: calc(25% - 1px); height: 50%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 50%; width: 25%; height: 50%;"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-col gap-1 border-border border-t px-3 py-2.5"
          >
            <span
              class="flex items-center gap-1.5 truncate font-mono text-foreground text-w-sm"
            >
              Card Grid Library
            </span>
            <span
              class="font-mono text-dim text-w-xs"
            >
              8 cells
            </span>
          </div>
        </button>
        <button
          aria-pressed="false"
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 33.33%; width: calc(25% - 1px); height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 33.33%; width: 25%; height: calc(33.33% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 66.66%; width: calc(25% - 1px); height: 33.34%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 66.66%; width: 25%; height: 33.34%;"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-col gap-1 border-border border-t px-3 py-2.5"
          >
            <span
              class="flex items-center gap-1.5 truncate font-mono text-foreground text-w-sm"
            >
              Basic 4x3
            </span>
            <span
              class="font-mono text-dim text-w-xs"
            >
              12 cells
            </span>
          </div>
        </button>
        <button
          aria-pressed="false"
          class="cursor-pointer gap-2 font-mono transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-w-sm p-0 normal-case tracking-normal rounded-item w-full group flex h-auto flex-col items-stretch justify-start overflow-hidden whitespace-normal rounded-item border border-border bg-surface text-left transition-colors hover:border-accent hover:bg-surface-raised"
          type="button"
        >
          <div
            class="w-full p-3"
          >
            <div
              class="relative aspect-[1.35/1] w-full rounded-item border border-border bg-secondary"
            >
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 0%; width: calc(25% - 1px); height: calc(25% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 0%; width: calc(25% - 1px); height: calc(25% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 0%; width: calc(25% - 1px); height: calc(25% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 0%; width: 25%; height: calc(25% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 25%; width: calc(25% - 1px); height: calc(25% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 25%; width: calc(25% - 1px); height: calc(25% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 25%; width: calc(25% - 1px); height: calc(25% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 25%; width: 25%; height: calc(25% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 50%; width: calc(25% - 1px); height: calc(25% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 50%; width: calc(25% - 1px); height: calc(25% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 50%; width: calc(25% - 1px); height: calc(25% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 50%; width: 25%; height: calc(25% - 1px);"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 0%; top: 75%; width: calc(25% - 1px); height: 25%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 25%; top: 75%; width: calc(25% - 1px); height: 25%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 50%; top: 75%; width: calc(25% - 1px); height: 25%;"
              />
              <div
                class="absolute border border-foreground/40 bg-foreground/[0.15]"
                style="left: 75%; top: 75%; width: 25%; height: 25%;"
              />
            </div>
          </div>
          <div
            class="flex w-full flex-col gap-1 border-border border-t px-3 py-2.5"
          >
            <span
              class="flex items-center gap-1.5 truncate font-mono text-foreground text-w-sm"
            >
              Basic 4x4
            </span>
            <span
              class="font-mono text-dim text-w-xs"
            >
              16 cells
            </span>
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex shrink-0 items-center justify-between border-border/40 border-t py-4"
    >
      <button
        class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-muted h-7 px-3 text-w-sm rounded-item w-auto font-mono uppercase tracking-widest"
      >
        Back
      </button>
      <button
        class="inline-flex cursor-pointer items-center justify-center gap-2 whitespace-nowrap transition-interactive focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-accent text-accent-foreground hover:bg-accent/90 h-7 px-3 text-w-sm rounded-item w-auto font-mono uppercase tracking-widest"
      >
        Continue
      </button>
    </div>
  </div>
</div>
`;

exports[`layout picker visual snapshots > matches the settings blueprint picker modal 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
/>
`;
